materialized each template to realize basic functionalities

--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Registration Confirmed!</h2>
+<h1>Dear {{name}}, Registration Data Submission Successfully!</h1>
+
+<p>
+Your data was submitted to Little Lottery successfully! However, the registration
+process has not completed yet; to complete it, please go to your email (which you
+specified in the registration) mailbox to click the confirmation link in the email
+sent by Little Lottery to confirm your entry to the lottery.
+</p>
+
+<div>Go back to <a href="{{ url_for('index') }}">Home Page</a></div>
 {% endblock %}
