--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Welcome To Little Lottery</h2>
+<h1>Welcome To Little Lottery</h1>
+
+<p>
+Fancy giving yourself a little present this month?
+<a href="{{ url_for('register') }}">Register yourself for Little Lottery</a>
+</p>
+<p>
+Or, you have aleady registered and want to check the <a href="{{ url_for('result') }}">result</a>?
+</p>
 {% endblock %}
