--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <meta name=viewport content="width=device-width, initial-scale=1">
+    <link type="text/css" rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
     <title>{{title}}</title>
 </head>
 <body>
